accessibility improvements and update to feed

--- a/download.html
+++ b/download.html
@@ -18,24 +18,24 @@
 <body class="DownloadPage">
     <div id="navbar">
         <img id="navbarLogoImg" src="images/jkg_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
-        <a href="index.html">Home</a>
-        <a href="download.html" title="Get the game!">Download</a>
-        <a href="about.html" title="Learn more about the game.">About</a>
-        <a href="https://jk2t.ddns.net/serverlists/list.php?protocol=27&gamename=1&version=1" title="Check server stats, provided by jk2t.ddns.net">Servers</a>
-        <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/" title="Hosted by JKHub.org.">Forum</a>
+        <a href="index.html" title="Home page." alt="Go to JKG home page.">Home</a>
+        <a href="download.html" title="Get the game!" alt="Go to JKG download page.">Download</a>
+        <a href="about.html" title="Learn more about the game." alt="Go to JKG about page.">About</a>
+        <a href="https://jk2t.ddns.net/serverlists/list.php?protocol=27&gamename=1&version=1" title="Check server stats, provided by jk2t.ddns.net" alt="Go to jk2t.ddns.net's JKG server listing page.">Servers</a>
+        <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/" title="Hosted by JKHub.org." alt="Go to JKG forums, hosted by JKHub.org">Forum</a>
     </div>
     
     <div class="logo" id="logo">
-        <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="center">
+        <img src="images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center">
     </div>
 
     <h1 id="downloadType">Download</h1>
     <div class="centerdiv">
         <a id="downloadBinBtn" href="#alternatives" class="binBtnDownload"
-            title="Binaries required for play.">Binaries</a> &nbsp;<img src="images/plus.png" alt="+" height="28"
-            width="28" title="You need both binaries and assets to play.">
+            title="Binaries required for play." alt="Download binaries required for play.">Binaries</a> &nbsp;<img src="images/plus.png" alt="+" height="28"
+            width="28" title="You need both binaries and assets to play." alt="+">
         &nbsp; <a id="downloadAssetBtn" href="#alternatives" class="assetBtnDownload"
-            title="Assets required for play.">Assets</a>
+            title="Assets required for play." alt="Download assets required for play.">Assets</a>
 
         <p>
             <br><strong><a href="#" class="patchnotes" title="View developer notes about the latest release.">Patch Notes</a></strong><br>
@@ -43,10 +43,10 @@
         </p>
         <br><br>
         <div><a id="downloadMapOneBtn" href="https://jkhub.org/files/file/2652-jedi-knight-galaxies-map-bundle-1/"
-            class="map1BtnDownload" title="Optional maps, required to play on most servers.">Map Bundle #1</a></div>
+            class="map1BtnDownload" title="Optional maps, required to play on most servers." alt="Download optional map pack #1 recommended for play.">Map Bundle #1</a></div>
             <br>
         <div><a id="downloadMapTwoBtn" href="https://uvu.box.com/shared/static/kb0wvyqtz0sarzs0kn1c8h03wrpjgb7c.zip" 
-            class="map1BtnDownload" title="Optional maps, required to play on most servers.">Map Bundle #2</a></div>
+            class="map1BtnDownload" title="Optional maps, required to play on most servers." alt="Download optional map pack #2 recommended for play.">Map Bundle #2</a></div>
         <br><br><br>
         <h3><a href="#alternatives">Alternative Downloads</a></h3>
         <h3><a href="#instructions">Instructions for Installation</a></h3>
@@ -57,7 +57,7 @@
     <div class="maindiv" id="instructionBody">
         <h2>Installing JKG</h2>
         
-        <p>Watch a <a href="https://www.youtube.com/watch?v=D-q9AJiFWPc" title="Install JKG Tutorial Video">tutorial
+        <p>Watch a <a href="https://www.youtube.com/watch?v=D-q9AJiFWPc" title="Install JKG Tutorial Video" alt="Install Tutorial Video Link">tutorial
                 video</a> to learn how to install or read the instructions below.</p><br>
 
         <h3>FAQ</h3>
@@ -68,20 +68,20 @@
         </p>
 
         <p><strong>I notice there is a primary release and a test release, which install do I want?</strong><br>
-            Most players will want to install the <a href="#testdiv">test release located at the bottom of the page</a> 
+            Most players will want to install the <a href="#testdiv" title="Jump to test releases on page." alt="Link to test releases on this page.">test release located at the bottom of the page</a> 
             as this will have the latest bug fixes and newest features and is updated the most often.  Just keep in mind 
             this is also usually the buggiest and most likely to crash.  If you want a slightly more stable client, get 
             the primary release instead.  Most servers run the latest test release.
         </p>
 
         <p><strong>Is Jedi Academy required to play?</strong><br>
-            <a href="about.html#FAQJA2Play" title="Click link for more info.">Jedi Academy</a> must be installed first
+            <a href="about.html#FAQJA2Play" title="Click link for more info." alt="Click link for more info.">Jedi Academy</a> must be installed first
             before you can play.
         </p>
 
         <p><strong>Which linux distributions are available?</strong><br>
             A debian based distribution compiled for ubuntu is available. You may also <a
-                href="https://github.com/JKGDevs/JediKnightGalaxies">build the source code yourself</a> to run it on
+                href="https://github.com/JKGDevs/JediKnightGalaxies" alt="Link to Github.">build the source code yourself</a> to run it on
             distributions not provided here.
         </p>
 
@@ -96,7 +96,7 @@
             No. Because Jedi Knight Galaxies is frequently updated, some antivirus vendors may flag it as suspicious. We
             try to expose new releases to several antivirus vendors shortly after release to help mitigate this, but
             some vendors are paranoid and notorious for incorrectly identifying legitimate software for malware. If you
-            would like a 2nd opinion, feel free to upload it to <a href="https://www.virustotal.com">Virus Total</a> to
+            would like a 2nd opinion, feel free to upload it to <a href="https://www.virustotal.com" alt="Link to virustotal.com">Virus Total</a> to
             have it scanned by major antivirus vendors.
         </p>
 
@@ -126,7 +126,7 @@
         <p>On Windows:<br>
             In order to play the game, use the 'Run JKGalaxies.bat' file (which lies in jkgalaxies) by double clicking
             it. If your game starts <a href="https://i.imgur.com/F81Too9.png"
-                title="Click link to see what this error looks like.">without a blue cursor</a> you most likely
+                title="Click link to see what this error looks like." alt="Link to error picture.">without a blue cursor</a> you most likely
             installed it wrong (the game is not seeing the Gamedata directory for JKA), you can also edit the batch file
             if you'd prefer to install it elsewhere from the directions above (but you're on your own if you do!).</p>
 
@@ -136,8 +136,8 @@
         </p>
         <br>
         <h2>Stuck?</h2>
-        <p>Need help installing? Watch <a href="https://www.youtube.com/watch?v=D-q9AJiFWPc">this tutorial video</a>
-            first.<br> Still stuck? Join our <a href="https://discord.gg/YuG8Zks">Discord</a> and check out the
+        <p>Need help installing? Watch <a href="https://www.youtube.com/watch?v=D-q9AJiFWPc" alt="Link to tutorial video."">this tutorial video</a>
+            first.<br> Still stuck? Join our <a href="https://discord.gg/YuG8Zks" alt="Link to Discord invite.">Discord</a> and check out the
             #helpdesk channel.</p>
     </div>
 
@@ -159,12 +159,12 @@
 
         <h2>Primary Releases</h2>
         <a id="downloadBinBtnSm" href="#tablePrimaryDownload" class="binBtnDownloadSm"
-            title="Binaries required for play.">Binaries</a> &nbsp;<img src="images/plus.png" alt="+" height="16"
+            title="Binaries required for play."  alt="Download binaries required for play.">Binaries</a> &nbsp;<img src="images/plus.png" alt="+" height="16"
             width="16" title="You need both binaries and assets to play.">
         &nbsp; <a id="downloadAssetBtnSm" href="#tablePrimaryDownload" class="assetBtnDownloadSm"
-            title="Assets required for play.">Assets</a>
+            title="Assets required for play."  alt="Download assets required for play.">Assets</a>
         <p>
-            <strong><a href="#" class="patchnotes" title="View developer notes about the latest release.">Patch Notes</a></strong><br>
+            <strong><a href="#" class="patchnotes" title="View developer notes about the latest release." alt="Link to patch notes.">Patch Notes</a></strong><br>
             <span class="release-info"></span><br>
             <span id="download-count">Total Downloads: </span>
         </p>
@@ -191,7 +191,7 @@
                     <th>
                         <p
                             title="A file checksum hash (SHA-256) can be used to confirm you have the real, original file and that it hasn’t been corrupted during the download process.  Click link for more info.">
-                            <a href="https://www.howtogeek.com/363735/what-is-a-checksum-and-why-should-you-care/" style="color:#c3e8ff;">Checksum</a>
+                            <a href="https://www.howtogeek.com/363735/what-is-a-checksum-and-why-should-you-care/" style="color:#c3e8ff;" alt="Link to howtogeek's explanation about checksums.">Checksum</a>
                         </p>
                     </th>
                     <th>
@@ -221,12 +221,12 @@
         <div class="centerdiv" id="testdiv">
             <h2>Test Releases</h2>
             <a id="downloadBinBtnTestSm" href="#tableTestDownload" class="binBtnDownloadSm"
-                title="Binaries required for play.">Binaries</a> &nbsp;<img src="images/plus.png" alt="+" height="16"
+                title="Binaries required for play."  alt="Download test binaries required for play.">Binaries</a> &nbsp;<img src="images/plus.png" alt="+" height="16"
                 width="16" title="You need both binaries and assets to play.">
             &nbsp; <a id="downloadAssetBtnTestSm" href="#tableTestDownload" class="assetBtnDownloadSm"
-                title="Assets required for play.">Assets</a>
+                title="Assets required for play."  alt="Download test assets required for play.">Assets</a>
             <p>
-                <strong><a href="#" class="test-patchnotes" title="View developer notes about the latest release.">Patch Notes</a></strong><br>
+                <strong><a href="#" class="test-patchnotes" title="View developer notes about the latest release."  alt="Link to test patch notes.">Patch Notes</a></strong><br>
                 <span class="test-release-info"></span><br>
                 <span id="test-download-count">Total Downloads: </span>
             </p>
@@ -254,7 +254,7 @@
                             <p
                                 title="A file checksum hash (SHA-256) can be used to confirm you have the real, original file and that it hasn’t been corrupted during the download process.  Click link for more info.">
                                 <a
-                                    href="https://www.howtogeek.com/363735/what-is-a-checksum-and-why-should-you-care/" style="color:#c3e8ff;">Checksum</a>
+                                    href="https://www.howtogeek.com/363735/what-is-a-checksum-and-why-should-you-care/" style="color:#c3e8ff;" alt="Link to howtogeek's explanation about checksums.">Checksum</a>
                             </p>
                         </th>
                         <th>
@@ -280,7 +280,7 @@
         <div class="centerdiv">
             <p><a href="https://github.com/JKGDevs/JediKnightGalaxies/"><img src="images/GitHub-Mark-Light-64px.png"
                         height="64" width="64" alt="Github Logo" Title="Get the source code on Github."></a></p>
-            <p><a href="https://github.com/JKGDevs/JediKnightGalaxies/">Source Code on Github</a></p>
+            <p><a href="https://github.com/JKGDevs/JediKnightGalaxies/" alt="Link to Github Source Code.">Source Code on Github</a></p>
         </div></a>
     </div>
 
