--- a/404.html
+++ b/404.html
@@ -12,15 +12,15 @@
     <body class="404Page">
         <div id="navbar">
             <img id="navbarLogoImg" src="https://wwww.jkgalaxies.net/images/jkg_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="right">
-            <a href="https://www.jkgalaxies.net/index.html">Home</a>
-            <a href="https://www.jkgalaxies.net/download.html" title="Get the game!">Download</a>
-            <a href="https://www.jkgalaxies.net/about.html" title="Learn more about the game.">About</a>
-            <a href="https://jk2t.ddns.net/serverlists/list.php?protocol=27&gamename=1&version=1" title="Check server stats, provided by jk2t.ddns.net">Servers</a>
-            <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/" title="Hosted by JKHub.org.">Forum</a>
+            <a href="https://www.jkgalaxies.net/index.html" alt="Go to JKG home page.">Home</a>
+            <a href="https://www.jkgalaxies.net/download.html" title="Get the game!" alt="Go to JKG download page.">Download</a>
+            <a href="https://www.jkgalaxies.net/about.html" title="Learn more about the game." alt="Go to JKG about page.">About</a>
+            <a href="https://jk2t.ddns.net/serverlists/list.php?protocol=27&gamename=1&version=1" title="Check server stats, provided by jk2t.ddns.net" alt="Go to jk2t.ddns.net's JKG server listing page.">Servers</a>
+            <a href="https://jkhub.org/forum/117-jedi-knight-galaxies/" title="Hosted by JKHub.org." alt="Go to JKG forums, hosted by JKHub.org">Forum</a>
         </div>
                 
             <div class="logo" id="logo">
-                <img src="https://www.jkgalaxies.net/images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies" align="center">
+                <img src="https://www.jkgalaxies.net/images/jkg-big_logo-inverted-dropshadow.png" class="img-fluid" alt="Jedi Knight Galaxies logo, click to show menu." align="center">
             </div>
         
             <h1>404 <br> Page Not Found</h1>
