updating install tutorial

--- a/download.html
+++ b/download.html
@@ -57,7 +57,7 @@
     <div class="maindiv" id="instructionBody">
         <h2>Installing JKG</h2>
         
-        <p>Watch a <a href="https://www.youtube.com/watch?v=D-q9AJiFWPc" title="Install JKG Tutorial Video" alt="Install Tutorial Video Link">tutorial
+        <p>Watch a <a href="https://www.youtube.com/watch?v=odx-3f07_eA" title="Install JKG Tutorial Video" alt="Install Tutorial Video Link">tutorial
                 video</a> to learn how to install or read the instructions below.</p><br>
 
         <h3>FAQ</h3>
@@ -136,7 +136,7 @@
         </p>
         <br>
         <h2>Stuck?</h2>
-        <p>Need help installing? Watch <a href="https://www.youtube.com/watch?v=D-q9AJiFWPc" alt="Link to tutorial video."">this tutorial video</a>
+        <p>Need help installing? Watch <a href="https://www.youtube.com/watch?v=odx-3f07_eA" alt="Link to tutorial video."">this tutorial video</a>
             first.<br> Still stuck? Join our <a href="https://discord.gg/YuG8Zks" alt="Link to Discord invite.">Discord</a> and check out the
             #helpdesk channel.</p>
     </div>
