adding tags for ze google

--- a/download.html
+++ b/download.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta name="Description" content="Jedi Knight Galaxies downloads.">
     <meta name="Copyright" content="Jedi Knight Galaxies Team">
-    <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, jedi academy, star wars mod, download JKG, download">
+    <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, jedi academy, star wars mod, download JKG, download, total conversion mod">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="Language" content="English">
 
