--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta charset="utf-8">
         <meta name="Description" content="Jedi Knight Galaxies, a mod for Jedi Academy.">
         <meta name="Copyright" content="Jedi Knight Galaxies Team">
-        <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, star wars mod, Jedi Academy, jk3, JKA">
+        <meta name="Keywords" content="JKG, Jedi Knight Galaxies, jkagalaxies, jkgalaxies, jedi knight, game, star wars, star wars online, star wars multiplayer, star wars multiplayer game, star wars game, star wars mod, Jedi Academy, jk3, JKA, jedi academy total conversion mod, total conversion mod">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="Language" content="English">
 		<meta name="google-site-verification" content="4DOJbomq9y00AL8HF-t8-JMZ66JHltuDpvhGTChLak4" />
