--- a/download.html
+++ b/download.html
@@ -48,14 +48,13 @@
         <div><a id="downloadMapTwoBtn" href="https://uvu.box.com/shared/static/kb0wvyqtz0sarzs0kn1c8h03wrpjgb7c.zip" 
             class="map1BtnDownload" title="Optional maps, required to play on most servers." alt="Download optional map pack #2 recommended for play.">Map Bundle #2</a></div>
         <br><br><br>
-        <h3><a href="#alternatives">Alternative Downloads</a></h3>
-        <h3><a href="#instructions">Instructions for Installation</a></h3>
+        <h3><a href="#alternatives" title="Download early test releases or for a different operating system.">Alternative Downloads</a></h3>
     </div>
     <br id="instructions"><br><br><br>
    
     <h1 onclick="revealInstructionsSpoiler()" title="Click to show/hide installation instructions.">Installation Info</h1>
     <div class="maindiv" id="instructionBody">
-        <h2>Installing JKG</h2>
+        <h2>Instructions for Installation</h2>
         
         <p>Watch a <a href="https://www.youtube.com/watch?v=odx-3f07_eA" title="Install JKG Tutorial Video" alt="Install Tutorial Video Link">tutorial
                 video</a> to learn how to install or read the instructions below.</p><br>
@@ -148,8 +147,8 @@
             Need a download for a different operating system or looking for a different download? 
             Two types of releases are available: 
             <ul>
-                <li><strong>Primary</strong>, the long-term, stable release.</li> 
-                <li><strong>Test</strong>, the latest and greatest, beta release.</li>
+                <li><strong><a href="#tablePrimaryDownload">Primary</a></strong>, the long-term, stable release.</li> 
+                <li><strong><a  href="#tableTestDownload">Test</a></strong>, the latest and greatest, beta release.</li>
             </ul>
             Note: You will need both binary and asset to play.
         </p>
