updated newsfeed and download page with better links

--- a/download.html
+++ b/download.html
@@ -56,8 +56,8 @@
     <div class="maindiv" id="instructionBody">
         <h2>Instructions for Installation</h2>
         
-        <p>Watch a <a href="https://www.youtube.com/watch?v=odx-3f07_eA" title="Install JKG Tutorial Video" alt="Install Tutorial Video Link">tutorial
-                video</a> to learn how to install or read the instructions below.</p><br>
+        <p>Watch a <a href="https://www.youtube.com/watch?v=odx-3f07_eA" title="Install JKG Tutorial Video" alt="Install tutorial video link." target="_blank">tutorial
+                video</a> to learn how to install or read the <a href="#Instructions" title="Text Install Instructions" alt="Text install instructions link.">instructions below</a>.</p><br>
 
         <h3>FAQ</h3>
         <p><strong>What are binaries and assets?</strong><br>
@@ -80,7 +80,7 @@
 
         <p><strong>Which linux distributions are available?</strong><br>
             A debian based distribution compiled for ubuntu is available. You may also <a
-                href="https://github.com/JKGDevs/JediKnightGalaxies" alt="Link to Github.">build the source code yourself</a> to run it on
+                href="https://github.com/JKGDevs/JediKnightGalaxies" alt="Link to Github." target="_blank">build the source code yourself</a> to run it on
             distributions not provided here.
         </p>
 
@@ -95,11 +95,11 @@
             No. Because Jedi Knight Galaxies is frequently updated, some antivirus vendors may flag it as suspicious. We
             try to expose new releases to several antivirus vendors shortly after release to help mitigate this, but
             some vendors are paranoid and notorious for incorrectly identifying legitimate software for malware. If you
-            would like a 2nd opinion, feel free to upload it to <a href="https://www.virustotal.com" alt="Link to virustotal.com">Virus Total</a> to
+            would like a 2nd opinion, feel free to upload it to <a href="https://www.virustotal.com" alt="Link to virustotal.com" target="_blank">Virus Total</a> to
             have it scanned by major antivirus vendors.
         </p>
 
-
+        <br id="Instructions">
         <br>
 
         <h3>Instructions</h3>
@@ -113,7 +113,7 @@
             Jedi Academy's GameData folder.
             If you have a previous installation of JKG, just replace the jkgalaxies directory with the one in the zip (if you
             have a really old version of JKG, you'll likely want to just install from scratch). Your directory structure should
-            look like this when installed:
+            look like <a href="https://i.imgur.com/3enIJaU.png" target="_blank">this</a> when installed:
         </p>
         <pre id="directoryText">[Loading...]</pre>
 
@@ -124,8 +124,8 @@
         <h3>Launching the Game</h3>
         <p>On Windows:<br>
             In order to play the game, use the 'Run JKGalaxies.bat' file (which lies in jkgalaxies) by double clicking
-            it. If your game starts <a href="https://i.imgur.com/F81Too9.png"
-                title="Click link to see what this error looks like." alt="Link to error picture.">without a blue cursor</a> you most likely
+            it. If your game starts <a href="https://i.imgur.com/F81Too9.png "
+                title="Click link to see what this error looks like." alt="Link to error picture." target="_blank">without a blue cursor</a> you most likely
             installed it wrong (the game is not seeing the Gamedata directory for JKA), you can also edit the batch file
             if you'd prefer to install it elsewhere from the directions above (but you're on your own if you do!).</p>
 
@@ -135,8 +135,8 @@
         </p>
         <br>
         <h2>Stuck?</h2>
-        <p>Need help installing? Watch <a href="https://www.youtube.com/watch?v=odx-3f07_eA" alt="Link to tutorial video."">this tutorial video</a>
-            first.<br> Still stuck? Join our <a href="https://discord.gg/YuG8Zks" alt="Link to Discord invite.">Discord</a> and check out the
+        <p>Need help installing? Watch <a href="https://www.youtube.com/watch?v=odx-3f07_eA" alt="Link to tutorial video." target="_blank">this tutorial video</a>
+            first.<br> Still stuck? Join our <a href="https://discord.gg/YuG8Zks" alt="Link to Discord invite." target="_blank">Discord</a> and check out the
             #helpdesk channel.</p>
     </div>
 
@@ -163,7 +163,7 @@
         &nbsp; <a id="downloadAssetBtnSm" href="#tablePrimaryDownload" class="assetBtnDownloadSm"
             title="Assets required for play."  alt="Download assets required for play.">Assets</a>
         <p>
-            <strong><a href="#" class="patchnotes" title="View developer notes about the latest release." alt="Link to patch notes.">Patch Notes</a></strong><br>
+            <strong><a href="#" class="patchnotes" title="View developer notes about the latest release." alt="Link to patch notes." target="_blank">Patch Notes</a></strong><br>
             <span class="release-info"></span><br>
             <span id="download-count">Total Downloads: </span>
         </p>
@@ -190,7 +190,7 @@
                     <th>
                         <p
                             title="A file checksum hash (SHA-256) can be used to confirm you have the real, original file and that it hasn’t been corrupted during the download process.  Click link for more info.">
-                            <a href="https://www.howtogeek.com/363735/what-is-a-checksum-and-why-should-you-care/" style="color:#c3e8ff;" alt="Link to howtogeek's explanation about checksums.">Checksum</a>
+                            <a href="https://www.howtogeek.com/363735/what-is-a-checksum-and-why-should-you-care/" style="color:#c3e8ff;" alt="Link to howtogeek's explanation about checksums." target="_blank">Checksum</a>
                         </p>
                     </th>
                     <th>
@@ -225,7 +225,7 @@
             &nbsp; <a id="downloadAssetBtnTestSm" href="#tableTestDownload" class="assetBtnDownloadSm"
                 title="Assets required for play."  alt="Download test assets required for play.">Assets</a>
             <p>
-                <strong><a href="#" class="test-patchnotes" title="View developer notes about the latest release."  alt="Link to test patch notes.">Patch Notes</a></strong><br>
+                <strong><a href="#" class="test-patchnotes" title="View developer notes about the latest release."  alt="Link to test patch notes." target="_blank">Patch Notes</a></strong><br>
                 <span class="test-release-info"></span><br>
                 <span id="test-download-count">Total Downloads: </span>
             </p>
@@ -253,7 +253,7 @@
                             <p
                                 title="A file checksum hash (SHA-256) can be used to confirm you have the real, original file and that it hasn’t been corrupted during the download process.  Click link for more info.">
                                 <a
-                                    href="https://www.howtogeek.com/363735/what-is-a-checksum-and-why-should-you-care/" style="color:#c3e8ff;" alt="Link to howtogeek's explanation about checksums.">Checksum</a>
+                                    href="https://www.howtogeek.com/363735/what-is-a-checksum-and-why-should-you-care/" style="color:#c3e8ff;" alt="Link to howtogeek's explanation about checksums." target="_blank">Checksum</a>
                             </p>
                         </th>
                         <th>
@@ -279,7 +279,7 @@
         <div class="centerdiv">
             <p><a href="https://github.com/JKGDevs/JediKnightGalaxies/"><img src="images/GitHub-Mark-Light-64px.png"
                         height="64" width="64" alt="Github Logo" Title="Get the source code on Github."></a></p>
-            <p><a href="https://github.com/JKGDevs/JediKnightGalaxies/" alt="Link to Github Source Code.">Source Code on Github</a></p>
+            <p><a href="https://github.com/JKGDevs/JediKnightGalaxies/" alt="Link to Github Source Code." target="_blank">Source Code on Github</a></p>
         </div></a>
     </div>
 
