improving some links/wording on download page

--- a/download.html
+++ b/download.html
@@ -74,7 +74,7 @@
         </p>
 
         <p><strong>Is Jedi Academy required to play?</strong><br>
-            <a href="about.html#FAQJA2Play" title="Click link for more info." alt="Click link for more info.">Jedi Academy</a> must be installed first
+            <a href="faq.html#FAQJA2Play" title="Click link for more info." alt="Click link for more info.">Jedi Academy</a> must be installed first
             before you can play.
         </p>
 
@@ -98,6 +98,11 @@
             would like a 2nd opinion, feel free to upload it to <a href="https://www.virustotal.com" alt="Link to virustotal.com" target="_blank">Virus Total</a> to
             have it scanned by major antivirus vendors.
         </p>
+
+        <p><strong>Where can I get more information about the game?</strong><br>
+            Check out our <a href = "faq.html" alt="Link to FAQ Page." title = "Link to FAQ Page.">FAQ page</a>.
+        </p>
+
 
         <br id="Instructions">
         <br>
