--- a/about.html
+++ b/about.html
@@ -48,7 +48,7 @@
                             </video>
                             <div class="carousel-caption d-none d-md-block">
                                 <h4>A Galaxy at War</h4>
-                                <p>Imperial forces struggle to crush rebel fractions spreading war and discord across known space.</p>
+                                <p>Imperial forces struggle to crush rebel factions spreading war and discord across known space.</p>
                             </div>
                         </div>
 						
