updating link on faq page

--- a/faq.html
+++ b/faq.html
@@ -92,7 +92,7 @@
                 Other community members are also usually happy to play whenever they are given a chance, so if you feel like scheduling a match yourself let people know on Discord you want to play a match and they will usually join you for a game if they're around.  Smoo is our official dev server administrator, and can usually help host a game server if one is not currently running.
             </p>
             <p>
-                You can also visit the <a href="https://jk2t.ddns.net/serverlists/list.php?protocol=27&gamename=1&version=1" title="Hosted by jk2t.ddns.net">server list</a> to view real-time information about the current number of players, number of servers, which map is currently loaded etc.
+                You can also visit the <a href="https://dark-clan.servegame.com/serverlist_new/serverlist.html#colGamename=1&colVersion=1&displayFilters=0&autoRefresh=1&jkaversion=1.01&theme=dark&sortReverse=1&serverInfoMode=0&game=jkg&sortBy=humans&filterString=" title="Check server stats, provided by dark-clan.servegame.com" alt="Go to dark-clan.servegame.com's JKG server listing page.">server list</a> to view real-time information about the current number of players, number of servers, which map is currently loaded etc.
             </p>
         </div>
             
