--- a/faq.html
+++ b/faq.html
@@ -212,15 +212,27 @@
 
         <div class="maindiv">
             <h2>How do I use a jetpack?</h2>
-            <p>After purchasing a jetpack make sure it is equipped to your ACI (press i to open your inventory and assign it to an ACI slot if it isn't).  Once equipped, you can press the use command (+use, the default binding is to e), while you are midair to activate it.  Tap use again to deactivate the jetpack.<br><br>
-               There are different types of jetpacks, for example, the cheapest (and most difficult to use) are 'burst' jetpacks, which rapidly burn through a small fuel tank to provide a 'burst' jump.  While your jetpack is activated you can also hold down shift to engage the turbo.  Keep in mind this burns fuel even faster than normal.  Be warned, if your jetpack runs out of fuel it will shut off in mid air!  Note: Most jetpacks cannot be activated while you are carrying the flag in CTF mode. 
+            <p>After purchasing a jetpack make sure it is equipped to your ACI (press i to open your inventory and assign it to an ACI slot, they auto assign themselves upon purchase so this is probably not needed).  Once equipped, you can press the use command (+use, the default binding is to e), while you are midair to activate it.  Alternatively you can also tap the ACI key the jetpack is bound to to activate.  Tap the key again to deactivate the jetpack.<br><br>
+               There are different types of jetpacks, for example, the cheapest (and most difficult to control) are 'burst' jetpacks, which rapidly burn through a small fuel tank to provide a 'burst' jump.  While your jetpack is activated you can also hold down shift to engage the turbo.  Keep in mind this burns fuel even faster than normal.  Be warned, if your jetpack runs out of fuel it will shut off in mid air!  Jetpacks can also be disabled by certain types of ion damage.  Note: Most jetpacks cannot be activated while you are carrying the flag in CTF mode.
             </p>
         </div>
 
         <div class="maindiv">
             <h2>How do shields work?</h2>
-            <p>After equipping a shield to your ACI (press i to open your inventory and assign it to an ACI slot if it isn't), your shield will start changing after its cooldown has expired.  Some shields do not have a cool down.  The shield bar (visible in the upper left corner of the UI), shows how strong your current shield is at the present moment.  Shields will act as a scapegoat for your health for certain types of damage.  If your shield is damaged, it will stop charging until the cooldown for the recharge resets.  If your shield is completely overloaded with damage (reduced to 0), you will be vulnerable to damage until it begins recharging.<br><br>
+            <p>After equipping a shield to your ACI (press i to open your inventory and assign it to an ACI slot, they auto assign themselves upon purchase so this is probably not needed), your shield will start changing after its cooldown has expired.  Some shields do not have a cool down.  The shield bar (visible in the upper left corner of the UI), shows how strong your current shield is at the present moment.  Shields will act as a scapegoat for your health for certain types of damage.  If your shield is damaged, it will stop charging until the cooldown for the recharge resets.  If your shield is completely overloaded with damage (reduced to 0), you will be vulnerable to damage until it begins recharging.<br><br>
                 Blue damage plums appear if you are damaged and the shield does its job of protecting your hp from damage.
+            </p>
+        </div>
+
+        <div class="maindiv">
+            <h2>How do I punch people?</h2>
+            <p>You can enter melee mode, by pressing on an ACI key a weapon is currently bound to.  For example, the starting pistol is often bound to slot 0, so pressing 0 will toggle melee mode.  Tap 0 again to switch back to your gun.  You can then punch people in melee mode by pressing the attack key (MOUSE 1).  Special moves can be performed by a combination of MOUSE2 and MOUSE1, such as kicks.
+            </p>
+        </div>
+
+        <div class="maindiv">
+            <h2>How do I dodge?</h2>
+            <p>If the server has enabled dodging, you can dodge by rolling at the precise time you're about to take damage.  You can roll by pressing forward (w) then pressing the crouch (ctrl or c) key.  Dodging will help negate damage, but cannot nullify it completely.  A perfect dodge results in a reduction of more damage then one who's timing is off.
             </p>
         </div>
 
