--- a/404.html
+++ b/404.html
@@ -46,7 +46,9 @@
                 <p>&copyJedi Knight Galaxies <script>document.write(new Date().getFullYear());</script></p>
             </div>
 
-            <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-            <script type="text/javascript" src="https://www.jkgalaxies.net/scripts/scripts.js"></script>
+            <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+			<script type="text/javascript">
+				window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.5.1.min.js">\x3C/script>');
+			</script>
     </body>
 </html>
