--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<meta name="google-site-verification" content="4DOJbomq9y00AL8HF-t8-JMZ66JHltuDpvhGTChLak4" />
 
         <link rel="icon" href="images/JKG_logo-inverted.ico" type="image/x-icon">
-        <link async rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         <link async rel="stylesheet" href="styles.css">
     </head>
     <body class="IndexPage">
@@ -67,10 +67,10 @@
             <p>&copyJedi Knight Galaxies <script>document.write(new Date().getFullYear());</script></p>
         </div>
 
-    <script async src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-    <script async defer type="text/javascript">
-            window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.4.1.min.js">\x3C/script>');
-    </script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+	<script type="text/javascript">
+		window.jQuery || document.write('\x3Cscript type="text/javascript" src="scripts/jquery-3.5.1.min.js">\x3C/script>');
+	</script>
     <script async type="text/javascript" src="scripts/scripts.js"></script>
     <script async defer src="https://cdn.jsdelivr.net/npm/@widgetbot/html-embed"></script>      
     </body>
