--- a/faq.html
+++ b/faq.html
@@ -52,7 +52,7 @@
         <h2>How do I keep up to date with JKG?</h2>
             <p>
             There are a number of places to check other than this website.  The easiest and most often updated is our <a href="https://discord.gg/YuG8Zks">Discord</a>. Official announcements are also posted on the <a href="https://jkhub.org/forum/119-jkgalaxies-news/">Forums</a>.  You can also find most of the game documentation, ideas, and roadmaps on the forums.  If you're interested in the source code, you can find it on <a href="https://github.com/JKGDevs/JediKnightGalaxies">Github</a>.
-            We also have a <a href="https://www.moddb.com/mods/jkgalaxies">ModDB</a>, <a href="https://www.twitch.tv/jkgalaxies">Twitch</a>, and <a href="https://www.facebook.com/JKGalaxies">Facebook</a>.
+            We also have a <a href="https://www.youtube.com/channel/UCnnAUSngUk8l3fycYMVXkKQ">YouTube</a>, <a href="https://www.moddb.com/mods/jkgalaxies">ModDB</a>, <a href="https://www.twitch.tv/jkgalaxies">Twitch</a>, and <a href="https://www.facebook.com/JKGalaxies">Facebook</a>.
             </p>
         </div>
         
