updating downloads page with moddb mirror, and jkhub map 2

--- a/download.html
+++ b/download.html
@@ -210,6 +210,9 @@
                     <th>
                         <p title="The tertiary download server.">Mirror #3</p>
                     </th>
+                    <th>
+                        <p title="The quaternary download server.">Mirror #4</p>
+                    </th>
                 </tr>
             </thead>
 
@@ -268,7 +271,7 @@
                             <p title="Click to download."><strong>Download Link</strong></p>
                         </th>
                         <th>
-                            <p title="The alternative download server.">Mirror #3</p>
+                            <p title="The alternative download server.">Mirror #2</p>
                         </th>
                     </tr>
                 </thead>
