--- a/download.html
+++ b/download.html
@@ -45,7 +45,7 @@
         <div><a id="downloadMapOneBtn" href="https://jkhub.org/files/file/2652-jedi-knight-galaxies-map-bundle-1/"
             class="map1BtnDownload" title="Optional maps, required to play on most servers." alt="Download optional map pack #1 recommended for play.">Map Bundle #1</a></div>
             <br>
-        <div><a id="downloadMapTwoBtn" href="https://uvu.box.com/shared/static/kb0wvyqtz0sarzs0kn1c8h03wrpjgb7c.zip" 
+        <div><a id="downloadMapTwoBtn" href="https://jkhub.org/files/file/3778-jedi-knight-galaxies-map-bundle-2/" 
             class="map1BtnDownload" title="Optional maps, required to play on most servers." alt="Download optional map pack #2 recommended for play.">Map Bundle #2</a></div>
         <br><br><br>
         <h3><a href="#alternatives" title="Download early test releases or for a different operating system.">Alternative Downloads</a></h3>
